# JPEG_algorithm

./: CMakeLists.txt  README.md  main.cpp  processed_image.cpp  processed_image.h  tests.cpp  tests.h
